adding home page

--- a/src/app/modules/components/home-page/home-page.component.html
+++ b/src/app/modules/components/home-page/home-page.component.html
@@ -1,3 +1,41 @@
-<p>
-  home-page works!
-</p>
+<div class="container">
+  <div class="column is-12">
+    <section class="hero is-info welcome is-small">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Hello, Admin.
+          </h1>
+          <h2 class="subtitle">
+            I hope you are having a great day!
+          </h2>
+        </div>
+      </div>
+    </section>
+    <section class="info-tiles">
+      <div class="tile is-ancestor has-text-centered">
+        <div class="tile is-parent">
+          <article class="tile is-child box">
+            <p class="title">439k</p>
+            <p class="subtitle">Total Customers</p>
+          </article>
+        </div>
+        <div class="tile is-parent">
+          <article class="tile is-child box">
+            <p class="title">3</p>
+            <p class="subtitle">Total Appointment</p>
+          </article>
+        </div>
+        <div class="tile is-parent">
+          <article class="tile is-child box">
+            <p class="title">3.4k</p>
+            <p class="subtitle">Total Orders Package Count</p>
+          </article>
+        </div>
+      </div>
+    </section>
+    <div class="columns">
+        <app-content-list></app-content-list>
+    </div>
+  </div>
+</div>
