--- a/src/app/modules/components/home-page/search-box/search-box.component.html
+++ b/src/app/modules/components/home-page/search-box/search-box.component.html
@@ -1,3 +1,9 @@
-<p>
-  search-box works!
-</p>
+<div class="field has-addons">
+  <div class="control is-expanded">
+    <input class="input" type="text"
+      name="searchStr"
+      [(ngModel)]="searchStr"
+      (keyup)="getData()"
+      placeholder="Search ...">
+  </div>
+</div>
