--- a/src/app/modules/components/home-page/content-list/content-list.component.html
+++ b/src/app/modules/components/home-page/content-list/content-list.component.html
@@ -1,3 +1,37 @@
-<p>
-  content-list works!
-</p>
+<div class="columns">
+  <div class="column is-12">
+    <div class="card events-card">
+      <header class="card-header">
+        <p class="card-header-title">
+          Events
+        </p>
+        <a href="#" class="card-header-icon" aria-label="more options">
+          <span class="icon">
+            <i class="fa fa-angle-down" aria-hidden="true"></i>
+          </span>
+        </a>
+      </header>
+      <div class="card-table">
+        <div class="content">
+          <table class="table is-fullwidth is-striped">
+            <tbody>
+              <tr>
+                <td width="5%"><i class="fa fa-bell-o"></i></td>
+                <td>Lorum ipsum dolem aire</td>
+                <td>Lorum ipsum dolem aire</td>
+                <td>Lorum ipsum dolem aire</td>
+                <td>Lorum ipsum dolem aire</td>
+                <td>Lorum ipsum dolem aire</td>
+                <td><a class="button is-small is-primary" href="#">Action</a></td>
+
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <footer class="card-footer">
+        <a href="#" class="card-footer-item">Up To Date</a>
+      </footer>
+    </div>
+  </div>
+</div>
