--- a/src/app/modules/components/home-page/content-list/content-list.component.html
+++ b/src/app/modules/components/home-page/content-list/content-list.component.html
@@ -1,4 +1,4 @@
-<div class="columns">
+<div class="column">
   <div class="column is-12">
     <div class="card events-card">
       <header class="card-header">
