--- a/src/app/modules/components/home-page/home-page.component.html
+++ b/src/app/modules/components/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="column is-12">
-    <section class="hero is-info welcome is-small">
+    <section class="hero is-danger welcome is-small">
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
@@ -16,20 +16,20 @@
       <div class="tile is-ancestor has-text-centered">
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">439k</p>
-            <p class="subtitle">Total Customers</p>
+            <p class="title has-text-info">439k</p>
+            <p class="title is-6 has-text-grey-dark">Total Customers</p>
           </article>
         </div>
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">3</p>
-            <p class="subtitle">Total Appointment</p>
+            <p class="title has-text-info">3</p>
+            <p class="title is-6 has-text-grey-dark">Total Appointment</p>
           </article>
         </div>
         <div class="tile is-parent">
           <article class="tile is-child box">
-            <p class="title">3.4k</p>
-            <p class="subtitle">Total Orders Package Count</p>
+            <p class="title has-text-info">3.4k</p>
+            <p class="title is-6 has-text-grey-dark">Total Orders Package Count</p>
           </article>
         </div>
       </div>
