--- a/src/app/modules/components/home-page/home-page.component.scss
+++ b/src/app/modules/components/home-page/home-page.component.scss
@@ -3,3 +3,7 @@ section.section.is-title-bar {
   padding: 1.5rem;
   border-bottom: 1px solid rgba(24,28,33,.06);
 }
+
+.title.is-6 {
+  font-weight: 400;
+}
