--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ html, body {
 }
 
 nav.navbar {
-  border-top: 4px solid #276cda;
+  border-top: 4px solid #676767;
   margin-bottom: 1rem;
 }
 .navbar-item.brand-text {
