--- a/src/app/modules/components/home-page/search-box/search-box.component.html
+++ b/src/app/modules/components/home-page/search-box/search-box.component.html
@@ -1,9 +1,26 @@
-<div class="field has-addons">
-  <div class="control is-expanded">
-    <input class="input" type="text"
-      name="searchStr"
-      [(ngModel)]="searchStr"
-      (keyup)="getData()"
-      placeholder="Search ...">
+
+<div class="card">
+  <header class="card-header">
+    <p class="card-header-title">
+      Inventory Search
+    </p>
+    <a href="#" class="card-header-icon" aria-label="more options">
+      <span class="icon">
+        <i class="fa fa-angle-down" aria-hidden="true"></i>
+      </span>
+    </a>
+  </header>
+  <div class="card-content">
+    <div class="content">
+      <div class="control has-icons-left has-icons-right">
+        <input class="input is-medium" type="text" placeholder="">
+        <span class="icon is-medium is-left">
+          <i class="fa fa-search"></i>
+        </span>
+        <span class="icon is-medium is-right">
+          <i class="fa fa-check"></i>
+        </span>
+      </div>
+    </div>
   </div>
 </div>
