--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
+html,
+body {
   font-family: 'Open Sans', serif;
   font-size: 16px;
   line-height: 1.5;
   height: 100%;
-  background: #ECF0F3;
+  background: #ecf0f3;
 }
 
 nav.navbar {
@@ -14,7 +15,8 @@ nav.navbar {
 .navbar-item.brand-text {
   font-weight: 300;
 }
-.navbar-item, .navbar-link {
+.navbar-item,
+.navbar-link {
   font-size: 14px;
   font-weight: 700;
 }
@@ -24,12 +26,12 @@ nav.navbar {
   margin-left: 0;
 }
 .menu-label {
-  color: #8F99A3;
+  color: #8f99a3;
   letter-spacing: 1.3;
   font-weight: 700;
 }
 .menu-list a {
-  color: #0F1D38;
+  color: #0f1d38;
   font-size: 14px;
   font-weight: 700;
 }
@@ -47,7 +49,7 @@ nav.navbar {
   margin-bottom: 2rem;
 }
 .card-header-title {
-  color: #8F99A3;
+  color: #8f99a3;
   font-weight: 400;
 }
 .info-tiles {
@@ -55,14 +57,15 @@ nav.navbar {
 }
 .info-tiles .subtitle {
   font-weight: 300;
-  color: #8F99A3;
+  color: #8f99a3;
 }
 .hero.welcome.is-info {
-  background: #36D1DC;
-  background: -webkit-linear-gradient(to right, #5B86E5, #36D1DC);
-  background: linear-gradient(to right, #5B86E5, #36D1DC);
+  background: #36d1dc;
+  background: -webkit-linear-gradient(to right, #5b86e5, #36d1dc);
+  background: linear-gradient(to right, #5b86e5, #36d1dc);
 }
-.hero.welcome .title, .hero.welcome .subtitle {
+.hero.welcome .title,
+.hero.welcome .subtitle {
   color: hsl(192, 17%, 99%);
 }
 .card .content {
@@ -71,7 +74,7 @@ nav.navbar {
 .card-footer-item {
   font-size: 14px;
   font-weight: 700;
-  color: #8F99A3;
+  color: #8f99a3;
 }
 .card-footer-item:hover {
 }
@@ -79,6 +82,7 @@ nav.navbar {
   margin-bottom: 0;
 }
 .events-card .card-table {
-  max-height: 250px;
-  overflow-y: scroll;
+  // max-height: 250px;
+  // overflow-y: scroll;
+  text-align: center;
 }
