--- a/src/app/modules/components/home-page/home-page.component.html
+++ b/src/app/modules/components/home-page/home-page.component.html
@@ -17,21 +17,20 @@
         <div class="tile is-ancestor has-text-centered">
           <div class="tile is-parent">
             <article class="tile is-child box">
-              <p class="title has-text-info">439k</p>
+              <p class="title has-text-info">3</p>
               <p class="title is-6 has-text-grey-dark">Total Customers</p>
             </article>
           </div>
           <div class="tile is-parent">
             <article class="tile is-child box">
-              <p class="title has-text-info">3</p>
+              <p class="title has-text-info">4</p>
               <p class="title is-6 has-text-grey-dark">Total Appointment</p>
             </article>
           </div>
           <div class="tile is-parent">
             <article class="tile is-child box">
-              <p class="title has-text-info">3.4k</p>
-              <p class="title is-6 has-text-grey-dark">Total Orders Package
-                Count</p>
+              <p class="title has-text-info">3</p>
+              <p class="title is-6 has-text-grey-dark">Total Orders Package</p>
             </article>
           </div>
         </div>
