--- a/src/app/modules/components/home-page/search-box/search-box.component.html
+++ b/src/app/modules/components/home-page/search-box/search-box.component.html
@@ -1,8 +1,7 @@
-
 <div class="card">
   <header class="card-header">
     <p class="card-header-title">
-      Inventory Search
+      Customer Search
     </p>
     <a href="#" class="card-header-icon" aria-label="more options">
       <span class="icon">
@@ -13,7 +12,9 @@
   <div class="card-content">
     <div class="content">
       <div class="control has-icons-left has-icons-right">
-        <input class="input is-medium" type="text" placeholder="">
+        <input class="input is-medium" name="searchStr" [(ngModel)]="searchStr"
+          (keyup)="getData()" type="text"
+          placeholder="">
         <span class="icon is-medium is-left">
           <i class="fa fa-search"></i>
         </span>
