feature/global-style

--- a/src/app/modules/components/home-page/content-list/content-list.component.html
+++ b/src/app/modules/components/home-page/content-list/content-list.component.html
@@ -39,6 +39,6 @@
     </div>
   </div>
   <footer class="card-footer">
-    <a href="#" class="card-footer-item">Up to Date</a>
+    <a class="card-footer-item">Up to Date</a>
   </footer>
 </div>
