--- a/src/app/modules/components/home-page/home-page.component.html
+++ b/src/app/modules/components/home-page/home-page.component.html
@@ -1,48 +1,49 @@
-<div class="container">
-  <div class="columns">
+
+<div class="columns">
     <div class="column is-12">
-      <section class="hero is-image welcome is-small">
-        <div class="hero-body">
-          <div class="container">
-            <h1 class="title">
-              Hello, Admin.
-            </h1>
-            <h2 class="subtitle">
-              I hope you are having a great day!
-            </h2>
-          </div>
+        <section class="hero is-image">
+            <div class="hero-body">
+                <div class="container">
+                    <h1 class="title">
+                        Hello, Admin.
+                    </h1>
+                    <h2 class="subtitle">
+                        I hope you are having a great day!
+                    </h2>
+                </div>
+            </div>
+        </section>
+        <section class="info-tiles">
+            <div class="tile is-ancestor has-text-centered">
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <p class="title has-text-info">3</p>
+                        <p class="title is-6 has-text-grey-dark">Total Customers</p>
+                    </article>
+                </div>
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <p class="title has-text-info">4</p>
+                        <p class="title is-6 has-text-grey-dark">Total
+                            Appointment</p>
+                    </article>
+                </div>
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <p class="title has-text-info">3</p>
+                        <p class="title is-6 has-text-grey-dark">Total Orders
+                            Package</p>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <div class="columns">
+            <div class="column is-9">
+                <app-content-list></app-content-list>
+            </div>
+            <div class="column is-3">
+                <app-search-box></app-search-box>
+            </div>
         </div>
-      </section>
-      <section class="info-tiles">
-        <div class="tile is-ancestor has-text-centered">
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title has-text-info">3</p>
-              <p class="title is-6 has-text-grey-dark">Total Customers</p>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title has-text-info">4</p>
-              <p class="title is-6 has-text-grey-dark">Total Appointment</p>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child box">
-              <p class="title has-text-info">3</p>
-              <p class="title is-6 has-text-grey-dark">Total Orders Package</p>
-            </article>
-          </div>
-        </div>
-      </section>
-      <div class="columns">
-        <div class="column is-9">
-          <app-content-list></app-content-list>
-        </div>
-        <div class="column is-3">
-          <app-search-box></app-search-box>
-        </div>
-      </div>
     </div>
-  </div>
 </div>
